fix overlapping bug with jc's component

--- a/client/components/QA/questions.css
+++ b/client/components/QA/questions.css
@@ -8,6 +8,7 @@
   left: 0;
   right: 0;
   background-color : rgba(0, 0, 0, 0.8);
+  z-index: 100;
 }
 
 .answerform{
@@ -19,8 +20,10 @@
   left: 0;
   right: 0;
   background-color : rgba(0, 0, 0, 0.8);
-
+  z-index: 100;
 }
+
+
 
 .innerForm {
   width: 500px;
